# prism-rn

./: .gitignore  CONTRIBUTING.md  LICENSE  PrismRn.podspec  README.md  package.json  react-native.config.js  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/prismrn/: PrismRnModule.kt  PrismRnPackage.kt
cpp/: prism-rn.cpp  prism-rn.h
include/prism/rn/: prismmodelproxy.hpp
ios/: PrismRn.h  PrismRn.mm  PrismRnExport.h  PrismRnExport.mm
src/: NativePrismRn.ts  index.tsx
windows/: PrismRn.sln
windows/PrismRn/: PrismRn.cpp  PrismRn.h  PrismRn.vcxproj  PrismRn.vcxproj.filters  ReactPackageProvider.cpp  ReactPackageProvider.h  ReactPackageProvider.idl  packages.lock.json  resource.h
windows/PrismRn/codegen/: NativePrismRnSpec.g.h  RNPrismRnSpecJSI-generated.cpp  RNPrismRnSpecJSI.h
